compilateurDeca/src/test/deca/context/invalid/sans_objet/controle/while_condition_not_boolean.deca

// Description:
//    Sans-Objet
//    Structures de controle
//    la condition doit être de type boolean 
//
// Resultats:
//    Ligne 16: 
//    Condition non booléenne
// 
// Historique:
//    cree le 06/01/2026


{
    int a = 0;
    
    while( a + 1){

    }
}